--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
-!
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="novus.css" />
+    <title>Novus Watch Series IV</title>
+  </head>
+
+  <body class="novus-watch">
+    <main class="series-iv">
+      <img
+        class="novus-img"
+        src="image/image.png"
+        alt="A picture of Novus Watch Series IV"
+        width="460px"
+        height="300px"
+      />
+
+      <div class="box">
+        <p class="novus-p">Novus Watch</p>
+        <p class="series-p">Series IV</p>
+      </div>
+
+      <p class="pinnacle-text">
+        The pinnacle of fashion and tech. This wearable piece is an homage to
+        gilded palaces and minimal regalia, combining nouveau-deco and brutalism
+        influences in a compact, Swiss-made watch.
+      </p>
+      <p class="tag">New and Improved!</p>
+    </main>
+  </body> </html>
