--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <meta name="viewport" content="width=device-width, user-scalable=no"> -->
     <link rel="stylesheet" href="novus.css" />
     <title>Novus Watch Series IV</title>
   </head>
@@ -14,8 +15,8 @@
         class="novus-img"
         src="image/image.png"
         alt="A picture of Novus Watch Series IV"
-        width="460px"
-        height="300px"
+        width="300px"
+       height="auto"
       />
 
       <div class="box">
